Gear: Thornmail
    - Revenge Root: 20%
    - PDEF: 2
    - HP: 5
Gear: Root's Wrath (Mage)
    - MATK 4
    - Root On Hit: 20%
    - MP 5
Fix: Rename all uses of "monster" to "monster" (more consistent naming convetion)
Fix: Enum attack scopes

JUST FINISHED
-------------
Bug: Certain gear properties were missing % sign
Balance: MDEF from palm gem is too much

COOKING
-------
Fix: Make UI subcards in highscore menu different (So they ain't cut off up top)
Bug: Animation cutting bug (where monsters end on the last frame of their animation)
Bug: Frost Golem skills should have unique message "Summons don't get skills"
Balance: Look into PDEF and MDEF values vs a lot of damage values (first area seems balanced, but later areas need to see)
Bug: Empty tooltip bug
Bug: Mage and Archer class select buttons can visually be seen de-whitening when swapping between main menu and class select (BUT NOT WARRIOR OR ROGUE?)
Bug: Monsters trying to use attackIndex - 1 % attackNum logic goes out of index
UI: Make eventDescription show physical/magical damage
UI: Might need to redo all attack animations cause pixel sizing is janky (64x64 to 96x96)

Monster: Need anohter monster for starting area to get a second theme
    -
    -
    -
Monster: The Grumbled (PDEF 5 MDEF 2) (Random)
    - Enroot: Magical attack that guarantees root
    - Cursed Seeds: Magical attack that damages a character and inflicts rbw
    - Regrow: Heal and gain regenerate for 3 turns  (make AI prevent use of heal if at > 90% health)
    - Wildfire: Inflict burn on all characters
    - Has root debuff permanently
Monster: Knight Puppet (PDEF 2 MDEF 1) (Random)
    - Disrupting Slash: Magical Attack, 50% chance to inflict seal (MATK -30%)
    - Guarding Stance: Gain Guard for 3 turns
    - Spell Shield: Restore HP and grant barrier for 3 turns to a random ally
Monster: Hanged Man (PDEF 2 MDEF 4) (Last on fifth turn AI)
    - Silent Arrows: Magical attack, 50% chance to inflict seal (MATK - 30%), hits all monsters